Got rid of material design icons & UI fix for iPad
Material icons were replace with CSS code to draw circle/dot since it was all we needed anyway.
Fixed UI bug that caused lights and dog time headers in race display to overlap

--- a/FlyballETSWeb/src/app/components/lights/lights.component.css
+++ b/FlyballETSWeb/src/app/components/lights/lights.component.css
@@ -1,9 +1,17 @@
-.material-icons.white {
+div.lightsContainer span.white {
    color: rgb(255, 0, 255);
 }
-.material-icons.orange { color: orange; }
-.material-icons.red { color: red; }
-.material-icons.blue { color: blue; }
-.material-icons.green { color: limegreen; }
+div.lightsContainer span.orange { color: orange; }
+div.lightsContainer span.red { color: red; }
+div.lightsContainer span.blue { color: blue; }
+div.lightsContainer span.green { color: limegreen; }
 
-.material-icons.md-48 { font-size: 48px; }
+
+div.lightsContainer {
+   width: 60px;
+}
+div.lightsContainer span:before {
+  content: '\25CF';
+  font-size: 50px;
+  line-height: 0.5em;
+}
